# C_language

./: .gitignore  CMakeLists.txt
ANSI_C/: CMakeLists.txt  Prac2.h  Prac5.h  Prac6.h  Prac7.h  Prac8.h  main.c  prog.c
Modern_C/: Makefile  regular_ex.c
Modern_C/IPC/file_map/: data.shared  data.type  mmap_private.c  mmap_shared.c  mprotect.c
Modern_C/IPC/filelock/: fcntl.c  flock.c
Modern_C/IPC/memory/: madvise.c  mlock.c  mmap_anony.c
Modern_C/IPC/msg_queue/: mq_create.c  mq_open.c  mq_receive.c  mq_send.c  notify_signal.c  notify_threads.c
Modern_C/IPC/pipe/: bio_pipe.c  fifo_client.c  fifo_msg.h  fifo_server.c  pipe_syn.c
Modern_C/IPC/semaphore/: close_sem.c  open_sem.c  sem_value.c  unamed_sem.c
Modern_C/IPC/shared_memory/: shm_create.c  shm_read.c  shm_write.c
Modern_C/oop/: dictionary.c  dictionary.h  keyval.c  keyval.h  overload.c  overload.h  point.c  point.h  private.c  private.h  refer.c  refer.h  reflection.c  reflection.h  user.c  vtable.c  vtable.h
Modern_C/regex/: Makefile  regular_ex.c
Modern_C/socket/: Makefile  build.sh  client.c  compile_commands.json  server.c
Modern_C/socket/advanced_socket/: adv_socket.c  filelist.mk
Modern_C/socket/basic_tcp/: filelist.mk  tcp_client.c  tcp_server.c
Modern_C/socket/basic_udp/: filelist.mk  udp_client.c  udp_server.c
Modern_C/socket/epoll/: edge_client.c  edge_server.c  filelist.mk  level_client.c  level_server.c
Modern_C/socket/half_close/: filelist.mk  half_client.c  half_server.c
Modern_C/socket/include/: debug.h  macro.h
Modern_C/socket/io_multiplexing/: client.c  filelist.mk  pipe_test.c  select_test.c  server.c
Modern_C/socket/multi_process/: client.c  filelist.mk  io_client.c  io_server.c  server.c  test.c
Modern_C/socket/multi_threads/: chat_client.c  chat_server.c  client.c  cond_var_test.c  filelist.mk  pthreads_test.c
include/: debug.h
